# School-Stuff

./: .gitignore  README.md
COSC261/: MidTerm.py  exam.py  lab1.py  lab2.py  lab3.py  lab4.py  week 9.py
COSC363/OpenGl_Test/: CMakeLists.txt  Model3D.cpp  Octahedron.off  Sphere.off  Teapot.cpp
COSC363/Raytracer-main/assignment 2/: CMakeLists.txt  Cosc363 Assignment 2.docx  Csg.cpp  Csg.h  Plane.cpp  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Torus.cpp  Torus.h  algebra.h  mandlebrot.cpp  mandlebrot.h  world.cpp  world.h
Cosc260/: Assingment1.py  assignment_2.py  last_week.py  testing.py  week_7.py
Cosc367/: assignment.py  assignment2.py  lab11.py  lab2.py  lab3.py  lab6.py  lab6_pratice.py  lab7.py  lab8.py  play.py  stuff.py  tester.txt  testing.py
Cosc368/: lab1.py  lab2.py  lab3.py  lab4.py  lab4.xlsx  log.txt  logWidths.txt  summary.csv  test.py
EMATH/: tutorial.docx  week1.docx
ENEL301/: Management Report.docx  ~$nagement Report.docx
ENGR/: Cheat sheet.docx  Paper_Planes plan.docx  Paper_Planes_Report.docx  Que_card.docx  Technical_report_plan.docx  case study.docx  types of engineers.docx
MAT101/: 1st.docx
MATH119/: intro_Euler.py  probablity.py  sinc.py
MATH220/: A6.docx  a1.docx  helper.py  ~$a1.docx
MMGT/: 1st.docx  2nd.docx  EXAM-Question 1.docx  EXAM-Question 2.docx  EXAM-Question 3.docx  EXAM-Question 4.docx  EXAM-Question 5.docx  EXAM-Question 6.docx  EXAM-Question 7.docx  MANAGERS.docx  Reflective Journal 1.docx  Reflective Journal 2.docx  Reflective Journal 3.docx  Reflective Journal 5.docx  Reflective Journal 6.docx  (+8 more)
(+190 files in other folders)
